--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ matplotlib~=3.9.2
 streamlit~=1.38.0
 numpy~=2.1.1
 scikit-learn~=1.5.2
+numpy==1.24.3
+pandas==2.1.1
+matplotlib==3.7.1
+seaborn==0.12.2
+streamlit==1.24.0
